applicata correzione anche al footer

--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
             </div>
         </div> 
         
-        <div class="footer-bot container"></div>
+        <div class="footer-bot container">
+            <div class="logo">LOGO</div>
+            <div class="button">BUTTON</div>
+        </div>
     </footer>
 </body>
 </html>
