definito header con menu e aggiunto jumbo

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 
     <header>
-        HEADER
         <div class="container">
-            <div class="logo">Logo</div>
+            <div class="logo">
+                <img src="./assets/img/logo.svg" alt="">
+            </div>
             <div class="menu">
                 <ul>
                     <li><a href="#">Scarica</a></li>
@@ -22,13 +23,12 @@
                     <li><a href="#">Assistenza</a></li>
                 </ul>
             </div>
-            <div class="button login">Accedi</div> 
+            <div class="button login"><a href="#">Accedi</a></div> 
         </div>
     </header>
 
 
     <div class="jumbotron">
-        JUMBOTRON
         <div class="jumbo-content">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus ex ratione laborum, vitae unde ipsam, voluptas sequi officiis harum facilis veritatis pariatur nobis alias! Natus ad minima harum esse? Incidunt?
         </div>
