--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 
     <div class="jumbotron">
         <div class="jumbo-content">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus ex ratione laborum, vitae unde ipsam, voluptas sequi officiis harum facilis veritatis pariatur nobis alias! Natus ad minima harum esse? Incidunt?
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunit&agrave artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave facile chiacchierare ogni giorno e ritrovarsi pi&ugrave spesso.</p>
+                <div class="cta-box">
+                    <div class="button cta-white"><a href="#">Scarica per Mac</a></div>
+                    <div class="button cta-black"><a href="#">Apri Discord nel tuo browser</a></div>
+                </div>
         </div>
     </div>
     
