--- a/index.html
+++ b/index.html
@@ -42,15 +42,21 @@
     <main>
         <section>
             <div class="container">
-                <div class="img">IMG</div>
-                <div class="text">text</div>
+                <div class="img"><img src="./assets/img/item1.svg" alt="item1"></div>
+                <div class="text">
+                    <h2>Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
             </div>
         </section>
 
         <section class="bg-grey">
             <div class="container">
-                <div class="text">TEXT</div>
-                <div class="img">IMG</div>
+                <div class="text">
+                    <h2>Dove trovarsi &eacute facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei l&igrave e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="img"><img src="./assets/img/item2.svg" alt="item2"></div>
             </div>
         </section>
 
