--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="img"><img src="./assets/img/item1.svg" alt="item1"></div>
                 <div class="text">
-                    <h2>Un luogo ad invito con tutto lo spazio necessario per parlare</h2>
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>
             </div>
@@ -62,18 +62,24 @@
 
         <section>
             <div class="container">
-                <div class="img">IMG</div>
-                <div class="text">TEXT</div>
+                <div class="img"><img src="./assets/img/item3.svg" alt="item3"></div>
+                <div class="text">
+                    <h2>Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                </div>
             </div>
         </section>
 
         <section class="bg-grey section-bot">
             <div class="container">
                 <div class="box-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita consequatur tenetur error voluptatum debitis dolorem modi eveniet saepe sequi voluptatibus, numquam praesentium iste quidem, harum laborum, iusto veritatis! Recusandae, voluptatem.
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao im video, guarda gli amici giocare in streaming o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 </div>
-                <div class="big-img">IMG</div>
-                <div class="text">TEXT</div>
+                <div class="big-img"><img src="./assets/img/item4-big.svg" alt="item4big"></div>
+                <img src="./assets/img/stars.svg" alt="stars">
+                <h3>Pronto a iniziare la tua avventura?</h3>
+                <div class="button cta-bot">Scarica per Mac</div>
             </div>
         </section>
     </main>
