--- a/index.html
+++ b/index.html
@@ -85,50 +85,66 @@
     </main>
 
     <footer>
-        FOOTER
         <div class="footer-top container">
-            <div class="col-social"></div>
+            <div class="col-social">
+                <h3>Il tuo posto per parlare</h3>
+                    <div class="lang-sect">
+                    <img class="lang-flag" src="./assets/img/ita.png" alt="Italian">
+                    <span class="language">Italiano</span>
+                </div>
+            </div>
             <div class="col-menu">
                 <ul>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
+                    <li><a href="">Prodotto</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perch&eacute Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
                 </ul>
             </div>
             <div class="col-menu">
                 <ul>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
+                    <li><a href="">Compagnia</a></li>
+                    <li><a href="">Chi siamo</a></li>
+                    <li><a href="">Lavora con noi</a></li>
+                    <li><a href="">Marchio</a></li>
+                    <li><a href="">Redazione</a></li>
+                    <li><a href="">Negozio</a></li>
                 </ul>
             </div>
             <div class="col-menu">
                 <ul>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
+                    <li><a href="">Risorse</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Nitro</a></li>
                 </ul>
             </div>
             <div class="col-menu">
                 <ul>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
-                    <li><a href="">LINK</a></li>
+                    <li><a href="">Norme</a></li>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
                 </ul>
             </div>
         </div> 
         
         <div class="footer-bot container">
-            <div class="logo">LOGO</div>
-            <div class="button">BUTTON</div>
+            <div class="logo">
+                <img src="./assets/img/logo.svg" alt="logo">
+            </div>
+            <div class="button cta-footer"><a href="#">Registrati</a></div>
         </div>
     </footer>
 </body>
