--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             </div>
         </section>
 
+        <!-- <div class="waves"></div> -->
+
         <section class="bg-grey">
             <div class="container">
                 <div class="text">
