--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Discord</title>
 </head>
@@ -27,7 +28,8 @@
         </div>
     </header>
 
-
+    <!-- JUMBOTRON -->
+    
     <div class="jumbotron">
         <div class="jumbo-content">
                 <h1>Il tuo posto per parlare</h1>
@@ -92,7 +94,13 @@
                 <h3>Il tuo posto per parlare</h3>
                     <div class="lang-sect">
                     <img class="lang-flag" src="./assets/img/ita.png" alt="Italian">
-                    <span class="language">Italiano</span>
+                    <span class="language"><a href="#">Italiano</a></span>
+                    <div class="social-container">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>    
                 </div>
             </div>
             <div class="col-menu">
