aggiunte correzioni, h4 al footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <title>Discord</title>
 </head>
 <body>
@@ -104,6 +104,7 @@
                 </div>
             </div>
             <div class="col-menu">
+                <h4>Prodotto</h4>
                 <ul>
                     <li><a href="">Prodotto</a></li>
                     <li><a href="">Scarica</a></li>
@@ -114,6 +115,7 @@
                 </ul>
             </div>
             <div class="col-menu">
+                <h4>Prodotto</h4>
                 <ul>
                     <li><a href="">Compagnia</a></li>
                     <li><a href="">Chi siamo</a></li>
@@ -124,6 +126,7 @@
                 </ul>
             </div>
             <div class="col-menu">
+                <h4>Prodotto</h4>
                 <ul>
                     <li><a href="">Risorse</a></li>
                     <li><a href="">Scarica</a></li>
@@ -140,6 +143,7 @@
                 </ul>
             </div>
             <div class="col-menu">
+                <h4>Prodotto</h4>
                 <ul>
                     <li><a href="">Norme</a></li>
                     <li><a href="">Scarica</a></li>
